--- a/src/public/css/purchase/edit.css
+++ b/src/public/css/purchase/edit.css
@@ -1,6 +1,6 @@
 .edit {
     max-width: 400px;
-    margin: 0px auto;
+    margin: 5px auto;
     padding: 40px 20px;
     text-align: center;
 }
@@ -15,32 +15,6 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
-}
-
-.edit__image-box {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: center;
-	gap: 16px;
-	margin-bottom: 30px;
-}
-
-.edit__image-circle {
-	width: 100px;
-	height: 100px;
-	border-radius: 50%;
-	background-color: #e0e0e0;
-	overflow: hidden;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.edit__image-preview {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
 }
 
 .edit__image-label {
@@ -80,6 +54,7 @@
     padding: 12px;
     border-radius: 6px;
     cursor: pointer;
+    margin-top: 50px;
 }
 
 .edit__error{
