--- a/src/public/css/trade/index.css
+++ b/src/public/css/trade/index.css
@@ -1,6 +1,6 @@
 .page {
     margin: 0;
-    min-height: 100vh;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -8,6 +8,11 @@
 .top-header {
     width: 100%;
     background-color: black;
+}
+
+.chat__error {
+    color: red;
+    font-size: 12px;
 }
 
 .top-header__inner {
@@ -212,6 +217,14 @@
     align-items: center;
     gap: 12px;
     padding: 16px 50px;
+    display: flex;
+    flex-direction: column;
+}
+
+.trade__form-row {
+    display: flex;
+    align-items: center;
+    gap: 8px;
 }
 
 .trade__input {
@@ -219,6 +232,7 @@
     padding: 10px;
     border: 1px solid #cccccc;
     border-radius: 4px;
+    width: 750px;
 }
 
 .trade__image-button {
@@ -344,5 +358,21 @@
 
     .trade__sidebar {
         width: 100%;
+    }
+
+    .trade__product {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .trade__form-row {
+        flex-wrap: wrap;
+    }
+
+    .trade__input {
+        max-width: 100%;
+    }
+    .trade__form {
+        padding: 12px 16px;
     }
 }
